fix build issues in grunt

--- a/package.json
+++ b/package.json
@@ -29,11 +29,13 @@
     "grunt-usemin": "^2.1.1",
     "grunt-wiredep": "1.8.0",
     "jshint-stylish": "^0.2.0",
-    "karma": "~0.13.22",
-    "karma-coverage": "~0.5.5",
-    "karma-chrome-launcher": "^0.1.4",
-    "karma-jasmine": "^0.1.5",
-    "karma-phantomjs-launcher": "^0.1.4",
+    "jasmine": "^2.8.0",
+    "karma": "^1.7.0",
+    "karma-chrome-launcher": "^2.2.0",
+    "karma-coverage": "^1.1.1",
+    "karma-jasmine": "^1.1.0",
+    "karma-phantomjs-launcher": "^1.0.4",
+    "phantomjs": "^2.1.7",
     "load-grunt-tasks": "^0.4.0",
     "time-grunt": "^0.3.1"
   },
