--- a/package.json
+++ b/package.json
@@ -1,13 +1,35 @@
 {
-  "name": "frontend",
-  "version": "0.0.0",
+  "name": "splainer",
+  "version": "1.0.0",
+  "app": "app",
+  "dist": "dist",
   "dependencies": {
+    "ace-builds": "^1.4.1",
+    "angular": "~1.7.7",
+    "angular-local-storage": "~0.7.1",
+    "angular-sanitize": "~1.7.7",
+    "angular-ui-ace": "https://github.com/angular-ui/ui-ace",
+    "angular-ui-bootstrap": "~2.5.0",
+    "bootstrap": "~3.3.6",
+    "es5-shim": "~4.1.11",
+    "gifsicle": "^4.0.1",
     "google-cdn-data": "^0.1.6",
-    "grunt-google-cdn": "^0.4.1"
+    "grunt": "^0.4.1",
+    "grunt-contrib-cssmin": "*",
+    "grunt-contrib-jshint": "~0.10.0",
+    "grunt-contrib-nodeunit": "~0.4.1",
+    "grunt-contrib-uglify": "~0.5.0",
+    "grunt-google-cdn": "^0.4.1",
+    "jquery": "~2.1.1",
+    "json3": "~3.3.1",
+    "ng-json-explorer": "https://github.com/odra/ng-json-explorer",
+    "splainer-search": "2.4.3",
+    "wiredep-away": "^0.1.3"
   },
   "devDependencies": {
-    "bower": "~1.3.8",
-    "grunt": "^0.4.1",
+    "angular-mocks": "~1.4.0",
+    "angular-scenario": "~1.4.0",
+    "bower": "^1.3.12",
     "grunt-autoprefixer": "^0.7.3",
     "grunt-concurrent": "^0.5.0",
     "grunt-contrib-clean": "^0.5.0",
@@ -16,27 +38,25 @@
     "grunt-contrib-copy": "^0.5.0",
     "grunt-contrib-cssmin": "^0.9.0",
     "grunt-contrib-htmlmin": "^0.3.0",
-    "grunt-contrib-imagemin": "^0.7.0",
+    "grunt-contrib-imagemin": "^0.9.2",
     "grunt-contrib-jshint": "^0.10.0",
     "grunt-contrib-uglify": "^0.4.0",
     "grunt-contrib-watch": "^0.6.1",
     "grunt-filerev": "^0.2.1",
-    "grunt-google-cdn": "^0.4.0",
     "grunt-karma": "^0.12.0",
     "grunt-newer": "^0.7.0",
     "grunt-ngmin": "^0.0.3",
     "grunt-svgmin": "^0.4.0",
     "grunt-usemin": "^2.1.1",
     "grunt-wiredep": "1.8.0",
+    "jasmine": "^2.9.1",
     "jshint-stylish": "^0.2.0",
-    "jasmine": "^2.8.0",
-    "karma": "^1.7.0",
+    "karma": "~4.1.0",
     "karma-chrome-launcher": "^2.2.0",
-    "karma-coverage": "^1.1.1",
-    "karma-jasmine": "^1.1.0",
-    "karma-phantomjs-launcher": "^1.0.4",
-    "phantomjs": "^2.1.7",
+    "karma-coverage": "~1.1.2",
+    "karma-jasmine": "^2.0.1",
     "load-grunt-tasks": "^0.4.0",
+    "puppeteer": "^0.13.0",
     "time-grunt": "^0.3.1"
   },
   "engines": {
