--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -59,16 +59,16 @@ jobs:
 
       - run:
           name: Deploy Master to s3
-          command: /home/circleci/.local/bin/aws s3 sync ./app s3://splainer.io/ --delete      
+          command: /home/circleci/.local/bin/aws s3 sync ./app s3://splainer.io/ --delete
 
 workflows:
   version: 2
   build-master:
     jobs:
-      - build:
-          filters:
-            branches:
-              only: circleci2.0
+      - build
+          #filters:
+          #  branches:
+          #    only: circleci2.0
       - publish-latest:
           requires:
             - build
