--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "app": "app",
   "dist": "dist",
   "dependencies": {
-    "ace-builds": "^1.4.1",
+    "ace-builds": "^1.4.5",
     "angular": "~1.7.7",
     "angular-local-storage": "~0.7.1",
     "angular-sanitize": "~1.7.7",
@@ -13,39 +13,36 @@
     "bootstrap": "~3.4.1",
     "es5-shim": "~4.1.11",
     "gifsicle": "^4.0.1",
-    "grunt": "^0.4.1",
-    "grunt-contrib-cssmin": "*",
-    "grunt-contrib-jshint": "~0.10.0",
-    "grunt-contrib-nodeunit": "~0.4.1",
-    "grunt-contrib-uglify": "~0.5.0",
-    "jquery": "~3.4.0",
-    "json3": "~3.3.1",
+    "grunt": "^1.0.4",
+    "jquery": "~3.4.1",
+    "json3": "~3.3.3",
     "ng-json-explorer": "https://github.com/odra/ng-json-explorer",
     "splainer-search": "2.4.3",
     "wiredep-away": "^0.1.3"
   },
   "devDependencies": {
-    "angular-mocks": "~1.4.0",
+    "angular-mocks": "~1.7.8",
     "angular-scenario": "~1.4.0",
-    "grunt-autoprefixer": "^0.7.3",
+    "bower": "^1.3.12",
+    "grunt-autoprefixer": "^3.0.4",
     "grunt-concurrent": "^0.5.0",
-    "grunt-contrib-clean": "^0.5.0",
-    "grunt-contrib-concat": "^0.4.0",
+    "grunt-contrib-clean": "^2.0.0",
+    "grunt-contrib-concat": "^1.0.1",
     "grunt-contrib-connect": "^0.7.1",
-    "grunt-contrib-copy": "^0.5.0",
-    "grunt-contrib-cssmin": "^0.9.0",
-    "grunt-contrib-htmlmin": "^0.3.0",
-    "grunt-contrib-imagemin": "^0.9.2",
-    "grunt-contrib-jshint": "^0.10.0",
-    "grunt-contrib-uglify": "^0.4.0",
-    "grunt-contrib-watch": "^0.6.1",
+    "grunt-contrib-copy": "^1.0.0",
+    "grunt-contrib-cssmin": "^3.0.0",
+    "grunt-contrib-htmlmin": "^3.1.0",
+    "grunt-contrib-imagemin": "^3.1.0",
+    "grunt-contrib-jshint": "^2.1.0",
+    "grunt-contrib-uglify": "^4.0.1",
+    "grunt-contrib-watch": "^1.1.0",
     "grunt-filerev": "^0.2.1",
     "grunt-karma": "^0.12.0",
-    "grunt-newer": "^0.7.0",
+    "grunt-newer": "^1.3.0",
     "grunt-ngmin": "^0.0.3",
-    "grunt-svgmin": "^0.4.0",
+    "grunt-svgmin": "^6.0.0",
     "grunt-usemin": "^2.1.1",
-    "grunt-wiredep": "1.8.0",
+    "grunt-wiredep": "3.0.1",
     "jasmine": "^2.9.1",
     "jshint-stylish": "^0.2.0",
     "karma": "~4.1.0",
@@ -54,7 +51,7 @@
     "karma-jasmine": "^2.0.1",
     "load-grunt-tasks": "^0.4.0",
     "puppeteer": "^0.13.0",
-    "time-grunt": "^0.3.1"
+    "time-grunt": "^2.0.0"
   },
   "engines": {
     "node": ">=0.10.0"
