--- a/package.json
+++ b/package.json
@@ -11,7 +11,7 @@
     "angular-ui-ace": "https://github.com/angular-ui/ui-ace",
     "angular-ui-bootstrap": "~2.5.0",
     "bootstrap": "~3.4.1",
-    "es5-shim": "~4.1.11",
+    "es5-shim": "~4.5.13",
     "gifsicle": "^4.0.1",
     "grunt": "^1.0.4",
     "jquery": "~3.4.1",
@@ -22,10 +22,9 @@
   },
   "devDependencies": {
     "angular-mocks": "~1.7.8",
-    "angular-scenario": "~1.4.0",
+    "autoprefixer": "^9.6.1",
     "bower": "^1.3.12",
-    "grunt-autoprefixer": "^3.0.4",
-    "grunt-concurrent": "^0.5.0",
+    "grunt-concurrent": "^3.0.0",
     "grunt-contrib-clean": "^2.0.0",
     "grunt-contrib-concat": "^1.0.1",
     "grunt-contrib-connect": "^0.7.1",
@@ -36,21 +35,22 @@
     "grunt-contrib-jshint": "^2.1.0",
     "grunt-contrib-uglify": "^4.0.1",
     "grunt-contrib-watch": "^1.1.0",
-    "grunt-filerev": "^0.2.1",
-    "grunt-karma": "^0.12.0",
+    "grunt-filerev": "^2.3.1",
+    "grunt-karma": "^3.0.2",
     "grunt-newer": "^1.3.0",
     "grunt-ngmin": "^0.0.3",
+    "grunt-postcss": "^0.9.0",
     "grunt-svgmin": "^6.0.0",
-    "grunt-usemin": "^2.1.1",
+    "grunt-usemin": "^3.1.0",
     "grunt-wiredep": "3.0.1",
-    "jasmine": "^2.9.1",
-    "jshint-stylish": "^0.2.0",
-    "karma": "~4.1.0",
-    "karma-chrome-launcher": "^2.2.0",
+    "jasmine": "^3.4.0",
+    "jshint-stylish": "^2.2.1",
+    "karma": "~4.2.0",
+    "karma-chrome-launcher": "^3.0.0",
     "karma-coverage": "~1.1.2",
     "karma-jasmine": "^2.0.1",
-    "load-grunt-tasks": "^0.4.0",
-    "puppeteer": "^0.13.0",
+    "load-grunt-tasks": "^5.0.0",
+    "puppeteer": "^1.19.0",
     "time-grunt": "^2.0.0"
   },
   "engines": {
@@ -58,5 +58,11 @@
   },
   "scripts": {
     "test": "grunt test"
-  }
+  },
+  "browserslist": [
+    "last 1 version",
+    "> 1%",
+    "maintained node versions",
+    "not dead"
+  ]
 }
