--- a/package.json
+++ b/package.json
@@ -8,7 +8,7 @@
     "angular": "~1.7.7",
     "angular-local-storage": "~0.7.1",
     "angular-sanitize": "~1.7.7",
-    "angular-ui-ace": "https://github.com/angular-ui/ui-ace",
+    "angular-ui-ace": "0.2.3",
     "angular-ui-bootstrap": "~2.5.0",
     "bootstrap": "~3.4.1",
     "es5-shim": "~4.5.13",
