--- a/package.json
+++ b/package.json
@@ -14,15 +14,13 @@
     "es5-shim": "~4.5.13",
     "jquery": "~3.4.1",
     "json3": "~3.3.3",
-    "ng-json-explorer": "https://github.com/odra/ng-json-explorer",
-    "splainer-search": "2.5.6",
-    "wiredep-away": "^0.1.3"
+    "ng-json-explorer": "http://github.com/o19s/ng-json-explorer",
+    "splainer-search": "2.5.7"
   },
   "devDependencies": {
     "angular-mocks": "~1.7.8",
     "autoprefixer": "^9.6.1",
-    "bower": "^1.3.12",
-    "grunt": "^1.0.4",
+    "grunt": "^1.1.0",
     "grunt-concurrent": "^3.0.0",
     "grunt-contrib-clean": "^2.0.0",
     "grunt-contrib-concat": "^1.0.1",
@@ -41,15 +39,14 @@
     "grunt-postcss": "^0.9.0",
     "grunt-svgmin": "^6.0.0",
     "grunt-usemin": "^3.1.0",
-    "grunt-wiredep": "3.0.1",
     "jasmine": "^3.4.0",
     "jshint-stylish": "^2.2.1",
     "karma": "~4.2.0",
-    "karma-chrome-launcher": "^3.0.0",
+    "karma-chrome-launcher": "^3.1.0",
     "karma-coverage": "~1.1.2",
     "karma-jasmine": "^2.0.1",
     "load-grunt-tasks": "^5.0.0",
-    "puppeteer": "^1.19.0",
+    "puppeteer": "^2.1.1",
     "serve-static": "^1.14.1",
     "time-grunt": "^2.0.0"
   },
