--- a/package.json
+++ b/package.json
@@ -15,7 +15,7 @@
     "jquery": "~3.4.1",
     "json3": "~3.3.3",
     "ng-json-explorer": "http://github.com/o19s/ng-json-explorer",
-    "splainer-search": "2.5.8-0"
+    "splainer-search": "2.6.0"
   },
   "devDependencies": {
     "angular-mocks": "~1.7.8",
