--- a/package.json
+++ b/package.json
@@ -1,57 +1,58 @@
 {
   "name": "splainer",
   "version": "1.0.0",
+  "license": "Apache-2.0",
   "app": "app",
   "dist": "dist",
   "dependencies": {
-    "ace-builds": "^1.4.5",
-    "angular": "~1.7.7",
+    "ace-builds": "^1.10.1",
+    "angular": "~1.8.3",
     "angular-local-storage": "~0.7.1",
-    "angular-sanitize": "~1.7.7",
+    "angular-sanitize": "~1.8.3",
     "angular-ui-ace": "0.2.3",
     "angular-ui-bootstrap": "~2.5.0",
     "bootstrap": "~3.4.1",
-    "es5-shim": "~4.5.13",
-    "jquery": "~3.4.1",
+    "es5-shim": "~4.6.7",
+    "jquery": "~3.6.1",
     "json3": "~3.3.3",
-    "ng-json-explorer": "https://github.com/o19s/ng-json-explorer",
-    "splainer-search": "2.10.0"
+    "ng-json-explorer": "http://github.com/o19s/ng-json-explorer",
+    "splainer-search": "2.19.0"
   },
   "devDependencies": {
-    "angular-mocks": "~1.7.8",
-    "autoprefixer": "^9.6.1",
-    "grunt": "^1.1.0",
+    "angular-mocks": "^1.8.3",
+    "autoprefixer": "^9.8.8",
+    "grunt": "^1.5.3",
     "grunt-concurrent": "^3.0.0",
-    "grunt-contrib-clean": "^2.0.0",
-    "grunt-contrib-concat": "^1.0.1",
-    "grunt-contrib-connect": "^2.0.0",
+    "grunt-contrib-clean": "^2.0.1",
+    "grunt-contrib-concat": "^2.1.0",
+    "grunt-contrib-connect": "^3.0.0",
     "grunt-contrib-copy": "^1.0.0",
-    "grunt-contrib-cssmin": "^3.0.0",
+    "grunt-contrib-cssmin": "^4.0.0",
     "grunt-contrib-htmlmin": "^3.1.0",
-    "grunt-contrib-imagemin": "^3.1.0",
-    "grunt-contrib-jshint": "^2.1.0",
-    "grunt-contrib-uglify": "^4.0.1",
+    "grunt-contrib-imagemin": "^4.0.0",
+    "grunt-contrib-jshint": "^3.2.0",
+    "grunt-contrib-uglify": "^5.2.2",
     "grunt-contrib-watch": "^1.1.0",
     "grunt-filerev": "^2.3.1",
-    "grunt-karma": "^3.0.2",
+    "grunt-karma": "^4.0.2",
     "grunt-newer": "^1.3.0",
     "grunt-ngmin": "^0.0.3",
     "grunt-postcss": "^0.9.0",
-    "grunt-svgmin": "^6.0.0",
+    "grunt-svgmin": "^6.0.1",
     "grunt-usemin": "^3.1.0",
-    "jasmine": "^3.4.0",
+    "jasmine-core": "^4.4.0",
     "jshint-stylish": "^2.2.1",
-    "karma": "~4.2.0",
-    "karma-chrome-launcher": "^3.1.0",
-    "karma-coverage": "~1.1.2",
-    "karma-jasmine": "^2.0.1",
-    "load-grunt-tasks": "^5.0.0",
-    "puppeteer": "^2.1.1",
-    "serve-static": "^1.14.1",
+    "karma": "^6.4.0",
+    "karma-chrome-launcher": "^3.1.1",
+    "karma-coverage": "~2.2.0",
+    "karma-jasmine": "^5.1.0",
+    "load-grunt-tasks": "^5.1.0",
+    "puppeteer": "^18.0.2",
+    "serve-static": "^1.15.0",
     "time-grunt": "^2.0.0"
   },
   "engines": {
-    "node": ">=0.10.0"
+    "node": ">=14"
   },
   "scripts": {
     "test": "grunt test"
